force-app/main/default/objects/Incentive_Activity_Discount__c/Incentive_Activity_Discount__c.object-meta.xml
<CustomObject>
    <label>Incentive Activity Discount</label>
    <nameField>
        <label>Incentive Activity Discount Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Incentive Activity Discounts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>