force-app/main/default/objects/Incentive_Activity_Discount__c/fields/Discount_Amount__c.field-meta.xml
<CustomField>
    <fullName>Discount_Amount__c</fullName>
    <label>Discount Amount</label>
    <precision>8</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>