force-app/main/default/objects/Incentive_Activity_Discount__c/fields/Incentive_Contract_Activity_Goal__c.field-meta.xml
<CustomField>
    <fullName>Incentive_Contract_Activity_Goal__c</fullName>
    <label>Incentive Contract Activity Goal</label>
    <referenceTo>Incentive_Contract_Activity_Goal__c</referenceTo>
    <relationshipLabel>Incentive Activity Discounts</relationshipLabel>
    <relationshipName>Incentive_Activity_Discounts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>