force-app/main/default/objects/Incentive_Activity_Discount__c/fields/Number_of_Activities_Needed__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Activities_Needed__c</fullName>
    <label>Number of Activities Needed</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>